--- a/first.css
+++ b/first.css
@@ -1,3 +1,23 @@
+*
+{
+  box-sizing:border-box;
+}
+.left{
+  width:20%;
+}
+.belowheader{
+border-top: 85px solid rgb(20, 243, 243);
+	border-left: 100px solid transparent;
+    border-bottom: 85px solid rgb(68, 171, 231);
+    border-right: 100px solid transparent;
+    
+}
+.right{
+  width:20%;
+}
+.center{
+  width:60%;
+}
 #body{
     background:linear-gradient(-90deg,rgb(22, 207, 231),rgb(235, 123, 210));
 }
@@ -47,14 +67,7 @@ button:hover {
     height:60px;
     background:linear-gradient(-20deg,rgb(179, 240, 13),rgb(10, 248, 157));
 }
-#leftcircle{
-    width: 100;
-	height: 0;
-	border-top: 85px solid rgb(20, 243, 243);
-	border-left: 100px solid transparent;
-    border-bottom: 85px solid rgb(68, 171, 231);
-    border-right: 100px solid transparent;
-}
+
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: rgb(244, 247, 246);
     opacity: 14; /* Firefox */
